--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -2234,9 +2234,9 @@
                                         </section>
                                       </div>
                                       <div class="_2lpeup5" role="alert">
-                                        <div class="_dn1bj5">
-                                          <div class="_15umbdc">Email sent</div>
-                                          <div class="_lopxyt">Check your email! We sent a link to
+                                        <div class="alert-body">
+                                          <div class="alert-title">Email sent</div>
+                                          <div class="alert-text">Check your email! We sent a link to
                                             <strong>ramirezjoseangelo@gmail.com</strong> to help you log in instantly.
                                           </div>
                                         </div>
@@ -5619,9 +5619,9 @@
                                         </section>
                                       </div>
                                       <div class="_2lpeup5" role="alert">
-                                        <div class="_dn1bj5">
-                                          <div class="_15umbdc">Email sent</div>
-                                          <div class="_lopxyt">Check your email! We sent a link to
+                                        <div class="alert-body">
+                                          <div class="alert-title">Email sent</div>
+                                          <div class="alert-text">Check your email! We sent a link to
                                             <strong>ramirezjoseangelo@gmail.com</strong> to help you log in instantly.</div>
                                         </div>
                                       </div>
