--- a/lps-resources/404.html
+++ b/lps-resources/404.html
@@ -13,8 +13,8 @@
   </head>
 
   <body>
-    <div class="_7ytvj78" role="alert" style="margin-left: 24px !important; margin-right: 24px !important;">
-      <div class="_1lkho1">
+    <div class="alert-danger" role="alert" style="margin-left: 24px !important; margin-right: 24px !important;">
+      <div class="alert-icon">
         <svg
           viewBox="0 0 32 32"
           xmlns="http://www.w3.org/2000/svg"
@@ -28,9 +28,9 @@
           ></path>
         </svg>
       </div>
-      <div class="_dn1bj5">
-        <div class="_15umbdc">Something went wrong</div>
-        <div class="_lopxyt">
+      <div class="alert-body">
+        <div class="alert-title">Something went wrong</div>
+        <div class="alert-text">
           Unfortunately, a server error prevented your request from being completed.
           Airbnb may be undergoing maintenance or your connection may have timed
           out. Please refresh the page or try again.
