remove unused class from skeleton

--- a/wishlist-loader.html
+++ b/wishlist-loader.html
@@ -253,7 +253,7 @@
                               <div class="_twmmpk">
                                 <span aria-busy="true" style="display: block; height: 19px; width: 35%; background-color: white; border-radius: 4px;">
                                   <span
-                                   class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
+                                   class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr"
                                    style="height: 100%; width: 100%; border-radius: 4px;"
                                   >
                                   </span>
@@ -295,14 +295,14 @@
                                   <div style="width: 100%;">
                                     <span aria-busy="true" style="display: block; height: 19px; width: 35%; background-color: white; border-radius: 4px;">
                                       <span
-                                       class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
+                                       class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr"
                                        style="height: 100%; width: 100%; border-radius: 4px;"
                                       >
                                       </span>
                                     </span>
                                     <span aria-busy="true" style="display: block; height: 14px; width: 55%; background-color: white; border-radius: 4px; margin-top: 15px;">
                                       <span
-                                       class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr"
+                                       class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr"
                                        style="height: 100%; width: 100%; border-radius: 4px;"
                                       >
                                       </span>
@@ -332,7 +332,7 @@
                                     <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
                                       <span data-testid="dot-loader" class="_l7ztla" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
                                     </span>
-                                  <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative atm_e2p1ow_glywfm atm_5rfkrh_7tcf61 dir dir-ltr" style="height: 100%; width: 100%;"></span>
+                                  <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                   </span>
                                 </div>
                               </div>
