rename skeleton-square, skeleton-dot*

--- a/dashboard-loader.html
+++ b/dashboard-loader.html
@@ -440,7 +440,7 @@
                                   min-height: 1px;
                                 "
                               >
-                              <div class="_1ltqfox" style="display: flex;justify-content: center;align-items: center;">
+                              <div class="skeleton-square" style="display: flex;justify-content: center;align-items: center;">
                                 <span aria-busy="true" style="display: block; height: calc(100% - 48px); width: calc(100% - 48px);">
                                  <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                 </span>
