--- a/experiences-loader.html
+++ b/experiences-loader.html
@@ -272,8 +272,8 @@
                     </div>
                     <div class="flex-before-after dir dir-ltr">
                       <div style="height: calc(100vh - 600px) !important;">
-                        <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
-                         <span data-testid="dot-loader" class="_l7ztla black-dots" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                        <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
+                         <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                         </span>
                       </div>
                     </div>
