--- a/help-loader.html
+++ b/help-loader.html
@@ -348,14 +348,14 @@
                                 <div id="search-suggestions-popup" class="hidden sfme1lx dir dir-ltr" role="listbox" tabindex="-1" aria-label="Search suggestions"
                                   class="sfme1lx dir dir-ltr" data-testid="search-suggestions-popup" style="height: 70px;">
                                   <ul role="group" class="l7kl1pb dir dir-ltr" aria-labelledby="suggestion-group-title-Toparticles">
-                                    <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
-                                      <span data-testid="dot-loader" class="_l7ztla black-dots" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                    <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
+                                      <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                      </span>
                                   </ul>
                                 </div>
                                 <div id="search-suggestions-popup-loader" class="hidden sfme1lx dir dir-ltr" role="listbox" tabindex="-1" aria-label="Search suggestions"
                                   class="sfme1lx dir dir-ltr" data-testid="search-suggestions-popup">
-                                  <div class="l1vl8tcn dir dir-ltr"><span data-testid="dot-loader" class="_l7ztla"><span class="_mr5az14"></span><span
+                                  <div class="l1vl8tcn dir dir-ltr"><span data-testid="dot-loader" class="skeleton__dots"><span class="_mr5az14"></span><span
                                         class="_1pphas65"></span><span class="_1x9afh0x"></span></span></div>
                                 </div>
                                 <div id="search-suggestions-popup-result" class="hidden sfme1lx dir dir-ltr" role="listbox" tabindex="-1" aria-label="Search suggestions"
@@ -442,8 +442,8 @@
                           <div id="FMP-target">
                             <div id="role_tabs" role='tablistcontainer'>
                               <div style="height: calc(100vh - 600px) !important;">
-                                <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
-                                  <span data-testid="dot-loader" class="_l7ztla black-dots" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
+                                  <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                 </span>
                               </div>
                             </div>
@@ -1062,7 +1062,7 @@
                   <div id="search-suggestions-popup-mobile-loader" role="listbox" tabindex="-1" aria-label="Search suggestions"
                     class="sfme1lx s1k6l13p dir dir-ltr hidden" data-testid="search-suggestions-popup-mobile">
                   
-                    <div class="l1vl8tcn dir dir-ltr"><span data-testid="dot-loader" class="_l7ztla"><span class="_mr5az14"></span><span
+                    <div class="l1vl8tcn dir dir-ltr"><span data-testid="dot-loader" class="skeleton__dots"><span class="_mr5az14"></span><span
                           class="_1pphas65"></span><span class="_1x9afh0x"></span></span>
                     </div>
                   </div>
