--- a/lps-resources/help.html
+++ b/lps-resources/help.html
@@ -384,7 +384,7 @@
                                 </div>
                                 <div id="search-suggestions-popup-loader" class="hidden sfme1lx dir dir-ltr" role="listbox" tabindex="-1" aria-label="Search suggestions"
                                   class="sfme1lx dir dir-ltr" data-testid="search-suggestions-popup">
-                                  <div class="l1vl8tcn dir dir-ltr"><span data-testid="dot-loader" class="_l7ztla"><span class="_mr5az14"></span><span
+                                  <div class="l1vl8tcn dir dir-ltr"><span data-testid="dot-loader" class="skeleton__dots"><span class="_mr5az14"></span><span
                                         class="_1pphas65"></span><span class="_1x9afh0x"></span></span></div>
                                 </div>
                                 <div id="search-suggestions-popup-result" class="hidden sfme1lx dir dir-ltr" role="listbox" tabindex="-1" aria-label="Search suggestions"
@@ -6408,7 +6408,7 @@
                   <div id="search-suggestions-popup-mobile-loader" role="listbox" tabindex="-1" aria-label="Search suggestions"
                     class="sfme1lx s1k6l13p dir dir-ltr hidden" data-testid="search-suggestions-popup-mobile">
                   
-                    <div class="l1vl8tcn dir dir-ltr"><span data-testid="dot-loader" class="_l7ztla"><span class="_mr5az14"></span><span
+                    <div class="l1vl8tcn dir dir-ltr"><span data-testid="dot-loader" class="skeleton__dots"><span class="_mr5az14"></span><span
                           class="_1pphas65"></span><span class="_1x9afh0x"></span></span>
                     </div>
                   </div>
