--- a/messages-loader.html
+++ b/messages-loader.html
@@ -291,8 +291,8 @@
                                     class="_6tvt8jj">Notifications</button></div>
                                 <div class="_wlj5ur" role="tabpanel" id="panel-messages">
                                   <div class="_1xheem">
-                                    <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
-                                      <span data-testid="dot-loader" class="_l7ztla black-dots" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                    <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
+                                      <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                     </span>
                                   </div>
                                 </div>
@@ -1762,8 +1762,8 @@
                               </div>
                               <div class="_wlj5ur">
                                 <div class="_1xheem">
-                                  <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
-                                    <span data-testid="dot-loader" class="_l7ztla black-dots" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                  <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
+                                    <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                   </span>
                                 </div>
                               </div>
@@ -1781,8 +1781,8 @@
                                   (Ctrl-m)</button>
                               </div>
                               <div class="_1x4ogty">
-                                <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
-                                  <span data-testid="dot-loader" class="_l7ztla black-dots" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
+                                  <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                 </span>
                               </div>
                             </div>
@@ -1810,8 +1810,8 @@
                                         </svg></span></button></div>
                                 </div>
                                 <div class="_d5nsn8">
-                                  <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
-                                    <span data-testid="dot-loader" class="_l7ztla black-dots" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                  <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
+                                    <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                   </span>
                                 </div>
                               </section>
