--- a/products-loader.html
+++ b/products-loader.html
@@ -300,7 +300,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="_1ltqfox">
+                                                        <div class="skeleton-square">
                                                           <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                           <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                                           </span>
@@ -333,7 +333,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="_1ltqfox">
+                                                        <div class="skeleton-square">
                                                           <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                           <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                                           </span>
@@ -366,7 +366,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="_1ltqfox">
+                                                        <div class="skeleton-square">
                                                           <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                           <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                                           </span>
@@ -1166,7 +1166,7 @@
                                                           --dls-liteimage-padding-top: 66.6667%;
                                                         "
                                                       >
-                                                        <div class="_1ltqfox">
+                                                        <div class="skeleton-square">
                                                           <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                           <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                                           </span>
@@ -1313,7 +1313,7 @@
                                                                     min-height: 1px;
                                                                   "
                                                                 >
-                                                                  <div class="_1ltqfox">
+                                                                  <div class="skeleton-square">
                                                                     <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                                     <span
                                                                       class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr"
@@ -2081,8 +2081,8 @@
                                           data-testid="little-search"
                                           aria-labelledby="littleSearchLabel"
                                         >
-                                          <span class="ldornx1 dir dir-ltr" >
-                                            <span data-testid="dot-loader" class="_l7ztla black-dots"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                          <span class="skeleton__dot-loader dir dir-ltr" >
+                                            <span data-testid="dot-loader" class="skeleton__dots black-dots"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                           </span>
                                         </div>
                                       </div>
@@ -2850,7 +2850,7 @@
                                                                       min-height: 1px;
                                                                     "
                                                                   >
-                                                                    <div class="_1ltqfox">
+                                                                    <div class="skeleton-square">
                                                                       <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                                         <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                                                       </span>
@@ -2887,7 +2887,7 @@
                                                                         min-height: 1px;
                                                                       "
                                                                     >
-                                                                      <div class="_1ltqfox">
+                                                                      <div class="skeleton-square">
                                                                         <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                                           <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                                                         </span>
@@ -2921,7 +2921,7 @@
                                                                         min-height: 1px;
                                                                       "
                                                                     >
-                                                                      <div class="_1ltqfox">
+                                                                      <div class="skeleton-square">
                                                                         <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                                           <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                                                         </span>
@@ -2959,7 +2959,7 @@
                                                                         min-height: 1px;
                                                                       "
                                                                     >
-                                                                      <div class="_1ltqfox">
+                                                                      <div class="skeleton-square">
                                                                         <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                                           <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                                                         </span>
@@ -2993,7 +2993,7 @@
                                                                         min-height: 1px;
                                                                       "
                                                                     >
-                                                                      <div class="_1ltqfox">
+                                                                      <div class="skeleton-square">
                                                                         <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                                           <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                                                         </span>
@@ -3215,8 +3215,8 @@
                                                               ></span></span
                                                             >
                                                             <span class="site-content__create-btn-text dir dir-ltr">
-                                                              <span class="ldornx1 dir dir-ltr">
-                                                                <span data-testid="dot-loader" class="_l7ztla"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                                              <span class="skeleton__dot-loader dir dir-ltr">
+                                                                <span data-testid="dot-loader" class="skeleton__dots"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                                               </span>
                                                             </span>
                                                           </button>
@@ -3313,7 +3313,7 @@
                                                                       min-height: 1px;
                                                                     "
                                                                   >
-                                                                    <div class="_1ltqfox">
+                                                                    <div class="skeleton-square">
                                                                       <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
                                                                       <span
                                                                         class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr"
@@ -3476,8 +3476,8 @@
                                                   <div class="_sk02b4">
                                                     <div class="_16bq4jy" style="width: 100%;">
                                                      <div style="min-height: 349px; width: 100%;">
-                                                      <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
-                                                        <span data-testid="dot-loader" class="_l7ztla black-dots" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                                      <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
+                                                        <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                                       </span>
                                                      </div>
                                                     </div>
@@ -3921,8 +3921,8 @@
                                                                     ></span></span
                                                                   >
                                                                   <span class="site-content__create-btn-text dir dir-ltr" style="padding:12px">
-                                                                    <span class="ldornx1 dir dir-ltr">
-                                                                      <span data-testid="dot-loader" class="_l7ztla"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                                                    <span class="skeleton__dot-loader dir dir-ltr">
+                                                                      <span data-testid="dot-loader" class="skeleton__dots"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                                                     </span>
                                                                   </span>
                                                                 </button>
@@ -4261,8 +4261,8 @@
                                                   <div class="_sk02b4">
                                                     <div class="_16bq4jy" style="width: 100%;">
                                                      <div style="min-height: 200px; width: 100%;">
-                                                      <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
-                                                        <span data-testid="dot-loader" class="_l7ztla black-dots" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                                      <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
+                                                        <span data-testid="dot-loader" class="skeleton__dots black-dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                                       </span>
                                                      </div>
                                                     </div>
