--- a/wishlist-loader.html
+++ b/wishlist-loader.html
@@ -327,10 +327,10 @@
                                   height: 100%;
                                 "
                               >
-                                <div class="_1ltqfox">
+                                <div class="skeleton-square">
                                   <span aria-busy="true" style="display: block; height: 100%; width: 100%;">
-                                    <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
-                                      <span data-testid="dot-loader" class="_l7ztla" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                    <span class="skeleton__dot-loader dir dir-ltr" style="z-index: 1;">
+                                      <span data-testid="dot-loader" class="skeleton__dots" style="z-index: 1;"><span class="skeleton__dot-1"></span><span class="skeleton__dot-2"></span><span class="skeleton__dot-3"></span></span>
                                     </span>
                                   <span class="animation-fill-mode-forwards animation-iteration-count-infinite animation-direction-alternate animation-duration-1s atm_1c_lvmtox animation-timing-function-ease-in-out animation-bg-color-current block relative dir dir-ltr" style="height: 100%; width: 100%;"></span>
                                   </span>
