--- a/alerts.html
+++ b/alerts.html
@@ -11,49 +11,49 @@
 <body>
   <div id="flash-container" class="flash-container" aria-live="polite" style="position: fixed;z-index: 102;width: 100%;/* display:none; */">
          <div class="alert alert-error alert-header">
-            <i class="icon alert-icon icon-alert-alt" role="img" aria-label="Error"></i>
+            <i class="icon alert__icon icon-alert-alt" role="img" aria-label="Error"></i>
             <span class="alert-message">Your request to reset password has already expired. Please try again.</span>
             <button class="close alert-close" aria-label="Close">
             ×
             </button>
          </div>
          <div class="alert alert-notice alert-info alert-header">
-            <i class="icon alert-icon icon-comment" role="presentation" aria-hidden="true"></i>
+            <i class="icon alert__icon icon-comment" role="presentation" aria-hidden="true"></i>
             <span class="alert-message">A link to reset your password has been sent to randomemail@yahoo.com.</span>
             <button class="close alert-close" aria-label="Close">
             ×
             </button>
          </div>
          <div class="alert alert-error alert-header">
-    <i class="icon alert-icon icon-alert-alt" role="img" aria-label="Error"></i>
+    <i class="icon alert__icon icon-alert-alt" role="img" aria-label="Error"></i>
     <span class="alert-message">No account exists for aswethink@yahooxr.com. Maybe you signed up using a different/incorrect e-mail address.</span>
     <button class="close alert-close" aria-label="Close">
       ×
     </button>
   </div>
 <div class="alert alert-notice alert-info alert-header">
-    <i class="icon alert-icon icon-comment" role="presentation" aria-hidden="true"></i>
+    <i class="icon alert__icon icon-comment" role="presentation" aria-hidden="true"></i>
     <span class="alert-message">Welcome back, Jose! Your password has been updated.</span>
     <button class="close alert-close" aria-label="Close">
       ×
     </button>
   </div>
 <div class="alert alert-notice alert-info alert-header">
-    <i class="icon alert-icon icon-comment" role="presentation" aria-hidden="true"></i>
+    <i class="icon alert__icon icon-comment" role="presentation" aria-hidden="true"></i>
     <span class="alert-message">The password reset link has expired.</span>
     <button class="close alert-close" aria-label="Close">
       ×
     </button>
   </div>
 <div class="alert alert-notice alert-info alert-header">
-    <i class="icon alert-icon icon-comment" role="presentation" aria-hidden="true"></i>
+    <i class="icon alert__icon icon-comment" role="presentation" aria-hidden="true"></i>
     <span class="alert-message">Please log in to access that page.</span>
     <button class="close alert-close" aria-label="Close">
       ×
     </button>
   </div>
 <div class="alert alert-error alert-header">
-    <i class="icon alert-icon icon-alert-alt" role="img" aria-label="Error"></i>
+    <i class="icon alert__icon icon-alert-alt" role="img" aria-label="Error"></i>
     <span class="alert-message">Item is not available.</span>
     <button class="close alert-close" aria-label="Close">
       ×
