--- a/lps-resources/404.html
+++ b/lps-resources/404.html
@@ -14,7 +14,7 @@
 
   <body>
     <div class="alert-danger" role="alert" style="margin-left: 24px !important; margin-right: 24px !important;">
-      <div class="alert-icon">
+      <div class="alert__icon">
         <svg
           viewBox="0 0 32 32"
           xmlns="http://www.w3.org/2000/svg"
