--- a/reviews/profile-reviews.html
+++ b/reviews/profile-reviews.html
@@ -590,7 +590,7 @@
                                       class="alert alert-with-icon alert-error alert-block hide"
                                     >
                                       <i
-                                        class="icon alert-icon icon-alert-alt"
+                                        class="icon alert__icon icon-alert-alt"
                                       ></i>
                                     </div>
 
