--- a/accessibility.html
+++ b/accessibility.html
@@ -12,7 +12,7 @@
 
 <body class="with-new-header"><noscript>
     <div class="alert alert-with-icon alert-error no-js-alert" data-nosnippet="true"><i
-        class="icon alert-icon icon-alert-alt"></i>We’re sorry, some parts of the Airbnb website don’t work
+        class="icon alert__icon icon-alert-alt"></i>We’re sorry, some parts of the Airbnb website don’t work
       properly without JavaScript enabled.</div>
   </noscript>
   <div data-application="true" class="hidden-md">
