--- a/account/login-security.html
+++ b/account/login-security.html
@@ -24,7 +24,7 @@
         class="alert alert-with-icon alert-error no-js-alert"
         data-nosnippet="true"
       >
-        <i class="icon alert-icon icon-alert-alt"></i>
+        <i class="icon alert__icon icon-alert-alt"></i>
         We’re sorry, some parts of the Airbnb website don’t work properly
         without JavaScript enabled.
       </div>
